tests/sum-types/ill-typed/mismatch-arg.stella
language core;
extend with #sum-types;

fn g(x : Nat + (Bool + (fn(Nat) -> Nat))) -> Nat {
  return match x {
      inl(1) => succ(n)
    | inr(bf) => match bf {
          inl(1) => if b then succ(0) else 0
        | inr(f) => f(f(succ(0)))
      }
  }
}

fn main(x : Nat) -> Nat {
  return g(inr(inr(fn(n : Nat) { return g(inl(n)) })))
}
